y.output
Terminals unused in grammar

   COMENTARIO
   JNA
   ENDIF
   TRUE
   ENDSENTENCE
   ENDWHILE


Gramática

    0 $accept: programa $end

    1 programa: MAIN ABRIRLLAVE declaracion sentencias CERRARLLAVE

    2 declaracion: DECLARE sentenciadeclaracion PUNTOYCOMA

    3 sentenciadeclaracion: tipo identificadorintermedio
    4                     | sentenciadeclaracion tipo identificadorintermedio

    5 tipo: FLOAT
    6     | INT
    7     | STRING
    8     | BOOLEAN
    9     | CHAR
   10     | DOUBLE

   11 identificadorintermedio: IDENTIFICADOR
   12                        | identificadorintermedio IDENTIFICADOR

   13 sentencias: sentencia PUNTOYCOMA
   14           | sentencias sentencia PUNTOYCOMA

   15 sentencia: WHILE sentenciawhile
   16          | IF sentenciaif
   17          | expresion
   18          | asignacion
   19          | asignacionespecial
   20          | PUT sentenciaparentesis
   21          | GET factorparentesis

   22 sentenciaparentesis: factorparentesis
   23                    | ABRIRPARENTESIS STRING CERRARPARENTESIS

   24 factorparentesis: ABRIRPARENTESIS IDENTIFICADOR CERRARPARENTESIS

   25 $@1: /* vacío */

   26 sentenciawhile: ABRIRPARENTESIS $@1 sentenciacomparacionwhile CERRARPARENTESIS sentenciainicialwhile

   27 sentenciacomparacionwhile: expresioncomparacionwhile

   28 $@2: /* vacío */

   29 sentenciacomparacionwhile: expresioncomparacionwhile $@2 AND expresioncomparacionwhile

   30 $@3: /* vacío */

   31 sentenciacomparacionwhile: expresioncomparacionwhile $@3 OR expresioncomparacionwhile

   32 expresioncomparacionwhile: expresion2 comparadores expresion

   33 sentenciainicialwhile: ABRIRLLAVE sentenciaintermediawhile CERRARLLAVE

   34 sentenciaintermediawhile: sentencia PUNTOYCOMA
   35                         | sentenciaintermediawhile PUNTOYCOMA sentencia PUNTOYCOMA

   36 $@4: /* vacío */

   37 $@5: /* vacío */

   38 sentenciaif: ABRIRPARENTESIS $@4 sentenciacomparacionif CERRARPARENTESIS $@5 sentenciainicialif

   39 sentenciacomparacionif: expresioncomparacionif

   40 $@6: /* vacío */

   41 sentenciacomparacionif: expresioncomparacionif $@6 AND expresioncomparacionif

   42 $@7: /* vacío */

   43 sentenciacomparacionif: expresioncomparacionif $@7 OR expresioncomparacionif

   44 expresioncomparacionif: expresion2 comparadores expresion

   45 $@8: /* vacío */

   46 sentenciainicialif: ABRIRLLAVE sentenciaintermediaif CERRARLLAVE $@8 sentenciaelse
   47                   | ABRIRLLAVE sentenciaintermediaif CERRARLLAVE

   48 sentenciaintermediaif: sentencia PUNTOYCOMA
   49                      | sentenciaintermediaif PUNTOYCOMA sentencia PUNTOYCOMA

   50 $@9: /* vacío */

   51 sentenciaelse: ELSE ABRIRLLAVE $@9 sentenciaintermediaif CERRARLLAVE

   52 asignacion: IDENTIFICADOR ASIG expresion
   53           | IDENTIFICADOR ASIG expresionstrings

   54 asignacionespecial: IDENTIFICADOR asignadorespecial

   55 asignadorespecial: ASIGESPMAS expresion
   56                  | ASIGESPMENOS expresion
   57                  | ASIGESPMULTIPLICACION expresion
   58                  | ASIGESPDIVISION expresion

   59 expresionstrings: STRING CONCAT STRING
   60                 | expresionstrings CONCAT STRING

   61 expresion2: expresion

   62 expresion: termino
   63          | expresion RESTA termino
   64          | expresion SUMA termino

   65 termino: factor
   66        | termino MULTIPLICACION factor
   67        | termino DIVISION factor

   68 comparadores: MAYOR
   69             | MENOR
   70             | MENORIGUAL
   71             | MAYORIGUAL
   72             | IGUAL
   73             | DISTINTO

   74 factor: IDENTIFICADOR
   75       | CONSTANTE
   76       | REAL
   77       | IDENTIFICADOR ABRIRCORCHETE CONSTANTE CERRARCORCHETE
   78       | STRING


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
IDENTIFICADOR (258) 11 12 24 52 53 54 74 77
CONSTANTE (259) 75 77
REAL (260) 76
MAIN (261) 1
COMENTARIO (262)
CONCAT (263) 59 60
SUMA (264) 64
RESTA (265) 63
MULTIPLICACION (266) 66
DIVISION (267) 67
ASIG (268) 52 53
MAYOR (269) 68
MENOR (270) 69
MAYORIGUAL (271) 71
MENORIGUAL (272) 70
IGUAL (273) 72
DISTINTO (274) 73
PUNTOYCOMA (275) 2 13 14 34 35 48 49
ABRIRPARENTESIS (276) 23 24 26 38
CERRARPARENTESIS (277) 23 24 26 38
ABRIRLLAVE (278) 1 33 46 47 51
CERRARLLAVE (279) 1 33 46 47 51
ABRIRCORCHETE (280) 77
CERRARCORCHETE (281) 77
IF (282) 16
ELSE (283) 51
WHILE (284) 15
PUT (285) 20
GET (286) 21
AND (287) 29 41
OR (288) 31 43
DECLARE (289) 2
INT (290) 6
FLOAT (291) 5
DOUBLE (292) 10
CHAR (293) 9
BOOLEAN (294) 8
ASIGESPMAS (295) 55
ASIGESPMENOS (296) 56
ASIGESPMULTIPLICACION (297) 57
ASIGESPDIVISION (298) 58
STRING (299) 7 23 59 60 78
JNA (300)
ENDIF (301)
TRUE (302)
ENDSENTENCE (303)
ENDWHILE (304)


No terminales con las reglas donde aparecen

$accept (50)
    en la izquierda: 0
programa (51)
    en la izquierda: 1, en la derecha: 0
declaracion (52)
    en la izquierda: 2, en la derecha: 1
sentenciadeclaracion (53)
    en la izquierda: 3 4, en la derecha: 2 4
tipo (54)
    en la izquierda: 5 6 7 8 9 10, en la derecha: 3 4
identificadorintermedio (55)
    en la izquierda: 11 12, en la derecha: 3 4 12
sentencias (56)
    en la izquierda: 13 14, en la derecha: 1 14
sentencia (57)
    en la izquierda: 15 16 17 18 19 20 21, en la derecha: 13 14 34
    35 48 49
sentenciaparentesis (58)
    en la izquierda: 22 23, en la derecha: 20
factorparentesis (59)
    en la izquierda: 24, en la derecha: 21 22
sentenciawhile (60)
    en la izquierda: 26, en la derecha: 15
$@1 (61)
    en la izquierda: 25, en la derecha: 26
sentenciacomparacionwhile (62)
    en la izquierda: 27 29 31, en la derecha: 26
$@2 (63)
    en la izquierda: 28, en la derecha: 29
$@3 (64)
    en la izquierda: 30, en la derecha: 31
expresioncomparacionwhile (65)
    en la izquierda: 32, en la derecha: 27 29 31
sentenciainicialwhile (66)
    en la izquierda: 33, en la derecha: 26
sentenciaintermediawhile (67)
    en la izquierda: 34 35, en la derecha: 33 35
sentenciaif (68)
    en la izquierda: 38, en la derecha: 16
$@4 (69)
    en la izquierda: 36, en la derecha: 38
$@5 (70)
    en la izquierda: 37, en la derecha: 38
sentenciacomparacionif (71)
    en la izquierda: 39 41 43, en la derecha: 38
$@6 (72)
    en la izquierda: 40, en la derecha: 41
$@7 (73)
    en la izquierda: 42, en la derecha: 43
expresioncomparacionif (74)
    en la izquierda: 44, en la derecha: 39 41 43
sentenciainicialif (75)
    en la izquierda: 46 47, en la derecha: 38
$@8 (76)
    en la izquierda: 45, en la derecha: 46
sentenciaintermediaif (77)
    en la izquierda: 48 49, en la derecha: 46 47 49 51
sentenciaelse (78)
    en la izquierda: 51, en la derecha: 46
$@9 (79)
    en la izquierda: 50, en la derecha: 51
asignacion (80)
    en la izquierda: 52 53, en la derecha: 18
asignacionespecial (81)
    en la izquierda: 54, en la derecha: 19
asignadorespecial (82)
    en la izquierda: 55 56 57 58, en la derecha: 54
expresionstrings (83)
    en la izquierda: 59 60, en la derecha: 53 60
expresion2 (84)
    en la izquierda: 61, en la derecha: 32 44
expresion (85)
    en la izquierda: 62 63 64, en la derecha: 17 32 44 52 55 56 57
    58 61 63 64
termino (86)
    en la izquierda: 65 66 67, en la derecha: 62 63 64 66 67
comparadores (87)
    en la izquierda: 68 69 70 71 72 73, en la derecha: 32 44
factor (88)
    en la izquierda: 74 75 76 77 78, en la derecha: 65 66 67


estado 0

    0 $accept: . programa $end

    MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


estado 1

    1 programa: MAIN . ABRIRLLAVE declaracion sentencias CERRARLLAVE

    ABRIRLLAVE  desplazar e ir al estado 3


estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


estado 3

    1 programa: MAIN ABRIRLLAVE . declaracion sentencias CERRARLLAVE

    DECLARE  desplazar e ir al estado 5

    declaracion  ir al estado 6


estado 4

    0 $accept: programa $end .

    $default  aceptar


estado 5

    2 declaracion: DECLARE . sentenciadeclaracion PUNTOYCOMA

    INT      desplazar e ir al estado 7
    FLOAT    desplazar e ir al estado 8
    DOUBLE   desplazar e ir al estado 9
    CHAR     desplazar e ir al estado 10
    BOOLEAN  desplazar e ir al estado 11
    STRING   desplazar e ir al estado 12

    sentenciadeclaracion  ir al estado 13
    tipo                  ir al estado 14


estado 6

    1 programa: MAIN ABRIRLLAVE declaracion . sentencias CERRARLLAVE

    IDENTIFICADOR  desplazar e ir al estado 15
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    IF             desplazar e ir al estado 18
    WHILE          desplazar e ir al estado 19
    PUT            desplazar e ir al estado 20
    GET            desplazar e ir al estado 21
    STRING         desplazar e ir al estado 22

    sentencias          ir al estado 23
    sentencia           ir al estado 24
    asignacion          ir al estado 25
    asignacionespecial  ir al estado 26
    expresion           ir al estado 27
    termino             ir al estado 28
    factor              ir al estado 29


estado 7

    6 tipo: INT .

    $default  reduce usando la regla 6 (tipo)


estado 8

    5 tipo: FLOAT .

    $default  reduce usando la regla 5 (tipo)


estado 9

   10 tipo: DOUBLE .

    $default  reduce usando la regla 10 (tipo)


estado 10

    9 tipo: CHAR .

    $default  reduce usando la regla 9 (tipo)


estado 11

    8 tipo: BOOLEAN .

    $default  reduce usando la regla 8 (tipo)


estado 12

    7 tipo: STRING .

    $default  reduce usando la regla 7 (tipo)


estado 13

    2 declaracion: DECLARE sentenciadeclaracion . PUNTOYCOMA
    4 sentenciadeclaracion: sentenciadeclaracion . tipo identificadorintermedio

    PUNTOYCOMA  desplazar e ir al estado 30
    INT         desplazar e ir al estado 7
    FLOAT       desplazar e ir al estado 8
    DOUBLE      desplazar e ir al estado 9
    CHAR        desplazar e ir al estado 10
    BOOLEAN     desplazar e ir al estado 11
    STRING      desplazar e ir al estado 12

    tipo  ir al estado 31


estado 14

    3 sentenciadeclaracion: tipo . identificadorintermedio

    IDENTIFICADOR  desplazar e ir al estado 32

    identificadorintermedio  ir al estado 33


estado 15

   52 asignacion: IDENTIFICADOR . ASIG expresion
   53           | IDENTIFICADOR . ASIG expresionstrings
   54 asignacionespecial: IDENTIFICADOR . asignadorespecial
   74 factor: IDENTIFICADOR .
   77       | IDENTIFICADOR . ABRIRCORCHETE CONSTANTE CERRARCORCHETE

    ASIG                   desplazar e ir al estado 34
    ABRIRCORCHETE          desplazar e ir al estado 35
    ASIGESPMAS             desplazar e ir al estado 36
    ASIGESPMENOS           desplazar e ir al estado 37
    ASIGESPMULTIPLICACION  desplazar e ir al estado 38
    ASIGESPDIVISION        desplazar e ir al estado 39

    $default  reduce usando la regla 74 (factor)

    asignadorespecial  ir al estado 40


estado 16

   75 factor: CONSTANTE .

    $default  reduce usando la regla 75 (factor)


estado 17

   76 factor: REAL .

    $default  reduce usando la regla 76 (factor)


estado 18

   16 sentencia: IF . sentenciaif

    ABRIRPARENTESIS  desplazar e ir al estado 41

    sentenciaif  ir al estado 42


estado 19

   15 sentencia: WHILE . sentenciawhile

    ABRIRPARENTESIS  desplazar e ir al estado 43

    sentenciawhile  ir al estado 44


estado 20

   20 sentencia: PUT . sentenciaparentesis

    ABRIRPARENTESIS  desplazar e ir al estado 45

    sentenciaparentesis  ir al estado 46
    factorparentesis     ir al estado 47


estado 21

   21 sentencia: GET . factorparentesis

    ABRIRPARENTESIS  desplazar e ir al estado 48

    factorparentesis  ir al estado 49


estado 22

   78 factor: STRING .

    $default  reduce usando la regla 78 (factor)


estado 23

    1 programa: MAIN ABRIRLLAVE declaracion sentencias . CERRARLLAVE
   14 sentencias: sentencias . sentencia PUNTOYCOMA

    IDENTIFICADOR  desplazar e ir al estado 15
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    CERRARLLAVE    desplazar e ir al estado 50
    IF             desplazar e ir al estado 18
    WHILE          desplazar e ir al estado 19
    PUT            desplazar e ir al estado 20
    GET            desplazar e ir al estado 21
    STRING         desplazar e ir al estado 22

    sentencia           ir al estado 51
    asignacion          ir al estado 25
    asignacionespecial  ir al estado 26
    expresion           ir al estado 27
    termino             ir al estado 28
    factor              ir al estado 29


estado 24

   13 sentencias: sentencia . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 52


estado 25

   18 sentencia: asignacion .

    $default  reduce usando la regla 18 (sentencia)


estado 26

   19 sentencia: asignacionespecial .

    $default  reduce usando la regla 19 (sentencia)


estado 27

   17 sentencia: expresion .
   63 expresion: expresion . RESTA termino
   64          | expresion . SUMA termino

    SUMA   desplazar e ir al estado 53
    RESTA  desplazar e ir al estado 54

    $default  reduce usando la regla 17 (sentencia)


estado 28

   62 expresion: termino .
   66 termino: termino . MULTIPLICACION factor
   67        | termino . DIVISION factor

    MULTIPLICACION  desplazar e ir al estado 55
    DIVISION        desplazar e ir al estado 56

    $default  reduce usando la regla 62 (expresion)


estado 29

   65 termino: factor .

    $default  reduce usando la regla 65 (termino)


estado 30

    2 declaracion: DECLARE sentenciadeclaracion PUNTOYCOMA .

    $default  reduce usando la regla 2 (declaracion)


estado 31

    4 sentenciadeclaracion: sentenciadeclaracion tipo . identificadorintermedio

    IDENTIFICADOR  desplazar e ir al estado 32

    identificadorintermedio  ir al estado 57


estado 32

   11 identificadorintermedio: IDENTIFICADOR .

    $default  reduce usando la regla 11 (identificadorintermedio)


estado 33

    3 sentenciadeclaracion: tipo identificadorintermedio .
   12 identificadorintermedio: identificadorintermedio . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 58

    $default  reduce usando la regla 3 (sentenciadeclaracion)


estado 34

   52 asignacion: IDENTIFICADOR ASIG . expresion
   53           | IDENTIFICADOR ASIG . expresionstrings

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 60

    expresionstrings  ir al estado 61
    expresion         ir al estado 62
    termino           ir al estado 28
    factor            ir al estado 29


estado 35

   77 factor: IDENTIFICADOR ABRIRCORCHETE . CONSTANTE CERRARCORCHETE

    CONSTANTE  desplazar e ir al estado 63


estado 36

   55 asignadorespecial: ASIGESPMAS . expresion

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    expresion  ir al estado 64
    termino    ir al estado 28
    factor     ir al estado 29


estado 37

   56 asignadorespecial: ASIGESPMENOS . expresion

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    expresion  ir al estado 65
    termino    ir al estado 28
    factor     ir al estado 29


estado 38

   57 asignadorespecial: ASIGESPMULTIPLICACION . expresion

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    expresion  ir al estado 66
    termino    ir al estado 28
    factor     ir al estado 29


estado 39

   58 asignadorespecial: ASIGESPDIVISION . expresion

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    expresion  ir al estado 67
    termino    ir al estado 28
    factor     ir al estado 29


estado 40

   54 asignacionespecial: IDENTIFICADOR asignadorespecial .

    $default  reduce usando la regla 54 (asignacionespecial)


estado 41

   38 sentenciaif: ABRIRPARENTESIS . $@4 sentenciacomparacionif CERRARPARENTESIS $@5 sentenciainicialif

    $default  reduce usando la regla 36 ($@4)

    $@4  ir al estado 68


estado 42

   16 sentencia: IF sentenciaif .

    $default  reduce usando la regla 16 (sentencia)


estado 43

   26 sentenciawhile: ABRIRPARENTESIS . $@1 sentenciacomparacionwhile CERRARPARENTESIS sentenciainicialwhile

    $default  reduce usando la regla 25 ($@1)

    $@1  ir al estado 69


estado 44

   15 sentencia: WHILE sentenciawhile .

    $default  reduce usando la regla 15 (sentencia)


estado 45

   23 sentenciaparentesis: ABRIRPARENTESIS . STRING CERRARPARENTESIS
   24 factorparentesis: ABRIRPARENTESIS . IDENTIFICADOR CERRARPARENTESIS

    IDENTIFICADOR  desplazar e ir al estado 70
    STRING         desplazar e ir al estado 71


estado 46

   20 sentencia: PUT sentenciaparentesis .

    $default  reduce usando la regla 20 (sentencia)


estado 47

   22 sentenciaparentesis: factorparentesis .

    $default  reduce usando la regla 22 (sentenciaparentesis)


estado 48

   24 factorparentesis: ABRIRPARENTESIS . IDENTIFICADOR CERRARPARENTESIS

    IDENTIFICADOR  desplazar e ir al estado 70


estado 49

   21 sentencia: GET factorparentesis .

    $default  reduce usando la regla 21 (sentencia)


estado 50

    1 programa: MAIN ABRIRLLAVE declaracion sentencias CERRARLLAVE .

    $default  reduce usando la regla 1 (programa)


estado 51

   14 sentencias: sentencias sentencia . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 72


estado 52

   13 sentencias: sentencia PUNTOYCOMA .

    $default  reduce usando la regla 13 (sentencias)


estado 53

   64 expresion: expresion SUMA . termino

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    termino  ir al estado 73
    factor   ir al estado 29


estado 54

   63 expresion: expresion RESTA . termino

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    termino  ir al estado 74
    factor   ir al estado 29


estado 55

   66 termino: termino MULTIPLICACION . factor

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    factor  ir al estado 75


estado 56

   67 termino: termino DIVISION . factor

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    factor  ir al estado 76


estado 57

    4 sentenciadeclaracion: sentenciadeclaracion tipo identificadorintermedio .
   12 identificadorintermedio: identificadorintermedio . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 58

    $default  reduce usando la regla 4 (sentenciadeclaracion)


estado 58

   12 identificadorintermedio: identificadorintermedio IDENTIFICADOR .

    $default  reduce usando la regla 12 (identificadorintermedio)


estado 59

   74 factor: IDENTIFICADOR .
   77       | IDENTIFICADOR . ABRIRCORCHETE CONSTANTE CERRARCORCHETE

    ABRIRCORCHETE  desplazar e ir al estado 35

    $default  reduce usando la regla 74 (factor)


estado 60

   59 expresionstrings: STRING . CONCAT STRING
   78 factor: STRING .

    CONCAT  desplazar e ir al estado 77

    $default  reduce usando la regla 78 (factor)


estado 61

   53 asignacion: IDENTIFICADOR ASIG expresionstrings .
   60 expresionstrings: expresionstrings . CONCAT STRING

    CONCAT  desplazar e ir al estado 78

    $default  reduce usando la regla 53 (asignacion)


estado 62

   52 asignacion: IDENTIFICADOR ASIG expresion .
   63 expresion: expresion . RESTA termino
   64          | expresion . SUMA termino

    SUMA   desplazar e ir al estado 53
    RESTA  desplazar e ir al estado 54

    $default  reduce usando la regla 52 (asignacion)


estado 63

   77 factor: IDENTIFICADOR ABRIRCORCHETE CONSTANTE . CERRARCORCHETE

    CERRARCORCHETE  desplazar e ir al estado 79


estado 64

   55 asignadorespecial: ASIGESPMAS expresion .
   63 expresion: expresion . RESTA termino
   64          | expresion . SUMA termino

    SUMA   desplazar e ir al estado 53
    RESTA  desplazar e ir al estado 54

    $default  reduce usando la regla 55 (asignadorespecial)


estado 65

   56 asignadorespecial: ASIGESPMENOS expresion .
   63 expresion: expresion . RESTA termino
   64          | expresion . SUMA termino

    SUMA   desplazar e ir al estado 53
    RESTA  desplazar e ir al estado 54

    $default  reduce usando la regla 56 (asignadorespecial)


estado 66

   57 asignadorespecial: ASIGESPMULTIPLICACION expresion .
   63 expresion: expresion . RESTA termino
   64          | expresion . SUMA termino

    SUMA   desplazar e ir al estado 53
    RESTA  desplazar e ir al estado 54

    $default  reduce usando la regla 57 (asignadorespecial)


estado 67

   58 asignadorespecial: ASIGESPDIVISION expresion .
   63 expresion: expresion . RESTA termino
   64          | expresion . SUMA termino

    SUMA   desplazar e ir al estado 53
    RESTA  desplazar e ir al estado 54

    $default  reduce usando la regla 58 (asignadorespecial)


estado 68

   38 sentenciaif: ABRIRPARENTESIS $@4 . sentenciacomparacionif CERRARPARENTESIS $@5 sentenciainicialif

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    sentenciacomparacionif  ir al estado 80
    expresioncomparacionif  ir al estado 81
    expresion2              ir al estado 82
    expresion               ir al estado 83
    termino                 ir al estado 28
    factor                  ir al estado 29


estado 69

   26 sentenciawhile: ABRIRPARENTESIS $@1 . sentenciacomparacionwhile CERRARPARENTESIS sentenciainicialwhile

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    sentenciacomparacionwhile  ir al estado 84
    expresioncomparacionwhile  ir al estado 85
    expresion2                 ir al estado 86
    expresion                  ir al estado 83
    termino                    ir al estado 28
    factor                     ir al estado 29


estado 70

   24 factorparentesis: ABRIRPARENTESIS IDENTIFICADOR . CERRARPARENTESIS

    CERRARPARENTESIS  desplazar e ir al estado 87


estado 71

   23 sentenciaparentesis: ABRIRPARENTESIS STRING . CERRARPARENTESIS

    CERRARPARENTESIS  desplazar e ir al estado 88


estado 72

   14 sentencias: sentencias sentencia PUNTOYCOMA .

    $default  reduce usando la regla 14 (sentencias)


estado 73

   64 expresion: expresion SUMA termino .
   66 termino: termino . MULTIPLICACION factor
   67        | termino . DIVISION factor

    MULTIPLICACION  desplazar e ir al estado 55
    DIVISION        desplazar e ir al estado 56

    $default  reduce usando la regla 64 (expresion)


estado 74

   63 expresion: expresion RESTA termino .
   66 termino: termino . MULTIPLICACION factor
   67        | termino . DIVISION factor

    MULTIPLICACION  desplazar e ir al estado 55
    DIVISION        desplazar e ir al estado 56

    $default  reduce usando la regla 63 (expresion)


estado 75

   66 termino: termino MULTIPLICACION factor .

    $default  reduce usando la regla 66 (termino)


estado 76

   67 termino: termino DIVISION factor .

    $default  reduce usando la regla 67 (termino)


estado 77

   59 expresionstrings: STRING CONCAT . STRING

    STRING  desplazar e ir al estado 89


estado 78

   60 expresionstrings: expresionstrings CONCAT . STRING

    STRING  desplazar e ir al estado 90


estado 79

   77 factor: IDENTIFICADOR ABRIRCORCHETE CONSTANTE CERRARCORCHETE .

    $default  reduce usando la regla 77 (factor)


estado 80

   38 sentenciaif: ABRIRPARENTESIS $@4 sentenciacomparacionif . CERRARPARENTESIS $@5 sentenciainicialif

    CERRARPARENTESIS  desplazar e ir al estado 91


estado 81

   39 sentenciacomparacionif: expresioncomparacionif .
   41                       | expresioncomparacionif . $@6 AND expresioncomparacionif
   43                       | expresioncomparacionif . $@7 OR expresioncomparacionif

    AND       reduce usando la regla 40 ($@6)
    OR        reduce usando la regla 42 ($@7)
    $default  reduce usando la regla 39 (sentenciacomparacionif)

    $@6  ir al estado 92
    $@7  ir al estado 93


estado 82

   44 expresioncomparacionif: expresion2 . comparadores expresion

    MAYOR       desplazar e ir al estado 94
    MENOR       desplazar e ir al estado 95
    MAYORIGUAL  desplazar e ir al estado 96
    MENORIGUAL  desplazar e ir al estado 97
    IGUAL       desplazar e ir al estado 98
    DISTINTO    desplazar e ir al estado 99

    comparadores  ir al estado 100


estado 83

   61 expresion2: expresion .
   63 expresion: expresion . RESTA termino
   64          | expresion . SUMA termino

    SUMA   desplazar e ir al estado 53
    RESTA  desplazar e ir al estado 54

    $default  reduce usando la regla 61 (expresion2)


estado 84

   26 sentenciawhile: ABRIRPARENTESIS $@1 sentenciacomparacionwhile . CERRARPARENTESIS sentenciainicialwhile

    CERRARPARENTESIS  desplazar e ir al estado 101


estado 85

   27 sentenciacomparacionwhile: expresioncomparacionwhile .
   29                          | expresioncomparacionwhile . $@2 AND expresioncomparacionwhile
   31                          | expresioncomparacionwhile . $@3 OR expresioncomparacionwhile

    AND       reduce usando la regla 28 ($@2)
    OR        reduce usando la regla 30 ($@3)
    $default  reduce usando la regla 27 (sentenciacomparacionwhile)

    $@2  ir al estado 102
    $@3  ir al estado 103


estado 86

   32 expresioncomparacionwhile: expresion2 . comparadores expresion

    MAYOR       desplazar e ir al estado 94
    MENOR       desplazar e ir al estado 95
    MAYORIGUAL  desplazar e ir al estado 96
    MENORIGUAL  desplazar e ir al estado 97
    IGUAL       desplazar e ir al estado 98
    DISTINTO    desplazar e ir al estado 99

    comparadores  ir al estado 104


estado 87

   24 factorparentesis: ABRIRPARENTESIS IDENTIFICADOR CERRARPARENTESIS .

    $default  reduce usando la regla 24 (factorparentesis)


estado 88

   23 sentenciaparentesis: ABRIRPARENTESIS STRING CERRARPARENTESIS .

    $default  reduce usando la regla 23 (sentenciaparentesis)


estado 89

   59 expresionstrings: STRING CONCAT STRING .

    $default  reduce usando la regla 59 (expresionstrings)


estado 90

   60 expresionstrings: expresionstrings CONCAT STRING .

    $default  reduce usando la regla 60 (expresionstrings)


estado 91

   38 sentenciaif: ABRIRPARENTESIS $@4 sentenciacomparacionif CERRARPARENTESIS . $@5 sentenciainicialif

    $default  reduce usando la regla 37 ($@5)

    $@5  ir al estado 105


estado 92

   41 sentenciacomparacionif: expresioncomparacionif $@6 . AND expresioncomparacionif

    AND  desplazar e ir al estado 106


estado 93

   43 sentenciacomparacionif: expresioncomparacionif $@7 . OR expresioncomparacionif

    OR  desplazar e ir al estado 107


estado 94

   68 comparadores: MAYOR .

    $default  reduce usando la regla 68 (comparadores)


estado 95

   69 comparadores: MENOR .

    $default  reduce usando la regla 69 (comparadores)


estado 96

   71 comparadores: MAYORIGUAL .

    $default  reduce usando la regla 71 (comparadores)


estado 97

   70 comparadores: MENORIGUAL .

    $default  reduce usando la regla 70 (comparadores)


estado 98

   72 comparadores: IGUAL .

    $default  reduce usando la regla 72 (comparadores)


estado 99

   73 comparadores: DISTINTO .

    $default  reduce usando la regla 73 (comparadores)


estado 100

   44 expresioncomparacionif: expresion2 comparadores . expresion

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    expresion  ir al estado 108
    termino    ir al estado 28
    factor     ir al estado 29


estado 101

   26 sentenciawhile: ABRIRPARENTESIS $@1 sentenciacomparacionwhile CERRARPARENTESIS . sentenciainicialwhile

    ABRIRLLAVE  desplazar e ir al estado 109

    sentenciainicialwhile  ir al estado 110


estado 102

   29 sentenciacomparacionwhile: expresioncomparacionwhile $@2 . AND expresioncomparacionwhile

    AND  desplazar e ir al estado 111


estado 103

   31 sentenciacomparacionwhile: expresioncomparacionwhile $@3 . OR expresioncomparacionwhile

    OR  desplazar e ir al estado 112


estado 104

   32 expresioncomparacionwhile: expresion2 comparadores . expresion

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    expresion  ir al estado 113
    termino    ir al estado 28
    factor     ir al estado 29


estado 105

   38 sentenciaif: ABRIRPARENTESIS $@4 sentenciacomparacionif CERRARPARENTESIS $@5 . sentenciainicialif

    ABRIRLLAVE  desplazar e ir al estado 114

    sentenciainicialif  ir al estado 115


estado 106

   41 sentenciacomparacionif: expresioncomparacionif $@6 AND . expresioncomparacionif

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    expresioncomparacionif  ir al estado 116
    expresion2              ir al estado 82
    expresion               ir al estado 83
    termino                 ir al estado 28
    factor                  ir al estado 29


estado 107

   43 sentenciacomparacionif: expresioncomparacionif $@7 OR . expresioncomparacionif

    IDENTIFICADOR  desplazar e ir al estado 59
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    STRING         desplazar e ir al estado 22

    expresioncomparacionif  ir al estado 117
    expresion2              ir al estado 82
    expresion               ir al estado 83
    termino                 ir al estado 28
    factor                  ir al estado 29


estado 108

   44 expresioncomparacionif: expresion2 comparadores expresion .
   63 expresion: expresion . RESTA termino
   64          | expresion . SUMA termino

    SUMA   desplazar e ir al estado 53
    RESTA  desplazar e ir al estado 54

    $default  reduce usando la regla 44 (expresioncomparacionif)


estado 109

   33 sentenciainicialwhile: ABRIRLLAVE . sentenciaintermediawhile CERRARLLAVE

    IDENTIFICADOR  desplazar e ir al estado 15
    CONSTANTE      desplazar e ir al estado 16
    REAL           desplazar e ir al estado 17
    IF             desplazar e ir al estado 18
    WHILE          desplazar e ir al estado 19
    PUT            desplazar e ir al estado 20
    GET            desplazar e ir al estado 21
    STRING         desplazar e ir al estado 22
